# fomu-pac-rs

./: Cargo.toml  Fomu.svd  LICENSE  README.md  generate.sh
src/: ctrl.rs  interrupt.rs  lib.rs  lxspi.rs  messible.rs  reboot.rs  rgb.rs  timer0.rs  touch.rs  usb.rs  version.rs
src/ctrl/: bus_errors0.rs  bus_errors1.rs  bus_errors2.rs  bus_errors3.rs  reset.rs  scratch0.rs  scratch1.rs  scratch2.rs  scratch3.rs
src/lxspi/: bitbang.rs  bitbang_en.rs  miso.rs
src/messible/: in_.rs  out.rs  status.rs
src/reboot/: addr0.rs  addr1.rs  addr2.rs  addr3.rs  ctrl.rs
src/rgb/: addr.rs  ctrl.rs  dat.rs  raw.rs
src/timer0/: en.rs  ev_enable.rs  ev_pending.rs  ev_status.rs  load0.rs  load1.rs  load2.rs  load3.rs  reload0.rs  reload1.rs  reload2.rs  reload3.rs  update_value.rs  value0.rs  value1.rs  value2.rs  value3.rs
src/touch/: i.rs  o.rs  oe.rs
src/usb/: address.rs  in_ctrl.rs  in_data.rs  in_ev_enable.rs  in_ev_pending.rs  in_ev_status.rs  in_status.rs  next_ev.rs  out_ctrl.rs  out_data.rs  out_enable_status.rs  out_ev_enable.rs  out_ev_pending.rs  out_ev_status.rs  out_stall_status.rs  out_status.rs  pullup_out.rs  setup_ctrl.rs  setup_data.rs  setup_ev_enable.rs  setup_ev_pending.rs  setup_ev_status.rs  setup_status.rs
src/version/: dirty.rs  gitextra0.rs  gitextra1.rs  gitrev0.rs  gitrev1.rs  gitrev2.rs  gitrev3.rs  major.rs  minor.rs  model.rs  revision.rs  seed0.rs  seed1.rs  seed2.rs  seed3.rs
