[package]
name = "fomu-pac"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.0"
riscv = "0.4.0"
vcell = "0.1.0"

[dependencies.riscv-rt]
optional = true
version = "0.4.0"

[features]
rt = ["riscv-rt"]
