[package]
name = "fomu-pac"
version = "0.0.4"
description = "svd2rust generated pac for the fomu"
license = "Apache-2.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/im-tomu/fomu-pac-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.0"
riscv = "0.6"
vcell = "0.1.0"

[dependencies.fomu-rt]
optional = true
version = "0.0.6"

[features]
rt = ["fomu-rt"]
